hutool在bean复制的时候当目标类型为List，当前类型为String时，会把字符串按逗号分割得到一个List赋值，无需手动编写赋值策略