@@ -3,21 +3,23 @@ package com.lzl.datagenerator;
 import cn.hutool.core.collection.CollectionUtil;
 import cn.hutool.core.lang.Pair;
 import cn.hutool.core.util.RandomUtil;
-import cn.hutool.db.Db;
-import cn.hutool.db.DbUtil;
 import cn.hutool.db.Entity;
 import cn.hutool.db.meta.Column;
 import cn.hutool.db.meta.JdbcType;
 import cn.hutool.log.Log;
 import com.google.common.collect.Lists;
 import com.lzl.datagenerator.config.CacheManager;
-import com.lzl.datagenerator.config.Configuration;
-import com.lzl.datagenerator.config.DataConfigBean;
 import com.lzl.datagenerator.config.TableConfig;
+import com.lzl.datagenerator.loader.ConfigLoader;
 import com.lzl.datagenerator.proxy.ColDataProvider;
+import com.lzl.datagenerator.utils.DbUtils;
+import com.lzl.datagenerator.utils.KeyGenerator;
 
 import java.sql.SQLException;
-import java.util.*;
+import java.util.Collection;
+import java.util.List;
+import java.util.Map;
+import java.util.Set;
 import java.util.stream.Collectors;
 import java.util.stream.LongStream;
 
@@ -28,34 +30,29 @@ import java.util.stream.LongStream;
  * @since 2023/7/31-22:24
  */
 public class DataGenerator {
-    private final Configuration configuration;
+    private final ConfigLoader configuration;
     private static final String DEL_TABLE_TMPL = "TRUNCATE TABLE %s";
 
-    public DataGenerator(Configuration configuration) {
+    public DataGenerator(ConfigLoader configuration) {
         this.configuration = configuration;
     }
 
     public void generate() {
-        configuration.getDataConfigList()
-                     .parallelStream()
-                     .filter(config -> "ALL".equals(configuration.getGenerate()) || configuration.getGenerate().contains(config.getDataSourceId()))
-                     .forEach(dataConfigBean -> dataConfigBean.getTableConfigMap()
-                                                              .values()
-                                                              .parallelStream()
-                                                              .map(tableConfig -> generateDataList(tableConfig, dataConfigBean))
-                                                              .forEach(dataPair -> saveData(dataConfigBean, dataPair)));
+        configuration.getTableConfigMap().entrySet().parallelStream().forEach(
+                dataConfigBean -> dataConfigBean.getValue().parallelStream().map(this::generateDataList).forEach(this::saveData));
 
     }
 
-    private void saveData(DataConfigBean dataConfigBean, Pair<String, List<Entity>> dataPair) {
+    private void saveData(Pair<TableConfig, List<Entity>> dataPair) {
         List<Entity> dataList = dataPair.getValue();
-        String tableName = dataPair.getKey();
-        TableConfig tableConfig = dataConfigBean.getTableConfigMap().get(tableName);
+        TableConfig tableConfig = dataPair.getKey();
+        String tableName = tableConfig.getTableName();
         Set<String> pkInfo = tableConfig.getPkInfo();
+        String datasourceId = tableConfig.getDatasourceId();
         if (CollectionUtil.isNotEmpty(dataList)) {
             Log.get().info("开始删除表{}数据.", tableName);
             try {
-                deleteByBatchSql(dataConfigBean, dataList, tableName, pkInfo);
+                deleteByBatchSql(datasourceId, dataList, tableName, pkInfo);
                 // deleteByPkInfo(dataConfigBean, dataList, tableName, pkInfo);
             } catch (Exception e) {
                 Log.get().error("删除表[{}]数据失败", tableName);
@@ -64,7 +61,7 @@ public class DataGenerator {
             Log.get().info("开始保存表{}数据，预计保存数据{}条.", tableName, dataList.size());
             Lists.partition(dataList, 5000).parallelStream().forEach(list -> {
                 try {
-                    Db.use(dataConfigBean.getDataSourceId()).insert(list);
+                    DbUtils.use(datasourceId).insert(list);
                 } catch (SQLException e) {
                     Log.get().error("保存表[{}]数据失败，原因[{}]", tableName, e.getMessage());
                     throw new RuntimeException(e);
@@ -78,25 +75,22 @@ public class DataGenerator {
     /**
      * 通过主键并行的一个个删除数据
      *
-     * @param dataConfigBean 数据配置
-     * @param dataList       数据集合
-     * @param tableName      表名
-     * @param pkInfo         主键列
+     * @param dataList  数据集合
+     * @param tableName 表名
+     * @param pkInfo    主键列
      */
-    private void deleteByPkInfo(DataConfigBean dataConfigBean, List<Entity> dataList, String tableName, Set<String> pkInfo) {
+    private void deleteByPkInfo(String datasourceId, List<Entity> dataList, String tableName, Set<String> pkInfo) {
         dataList.parallelStream().map(data -> {
             Entity entity = Entity.create(tableName);
-            Map<String, Object> pkDataMap = pkInfo.parallelStream()
-                                                  .map(pk -> Pair.of(pk, data.get(pk)))
-                                                  .collect(Collectors.toMap(Pair::getKey, Pair::getValue));
+            Map<String, Object> pkDataMap = pkInfo.parallelStream().map(pk -> Pair.of(pk, data.get(pk))).collect(
+                    Collectors.toMap(Pair::getKey, Pair::getValue));
             entity.putAll(pkDataMap);
             return entity;
         }).forEach(e -> {
             try {
-                DbUtil.use(DbUtil.getDs(dataConfigBean.getDataSourceId())).del(e);
+                DbUtils.use(datasourceId).del(e);
             } catch (Exception ex) {
-                Log.get()
-                   .error("数据库ID[{}]，表[{}]的数据删除失败，删除主键：{}", dataConfigBean.getDataSourceId(), tableName, generatePkStr(e, pkInfo));
+                Log.get().error("数据库ID[{}]，表[{}]的数据删除失败，删除主键：{}", datasourceId, tableName, generatePkStr(e, pkInfo));
                 throw new RuntimeException(ex);
             }
         });
@@ -109,34 +103,21 @@ public class DataGenerator {
     /**
      * 通过构建删除语句，批量执行，完成数据删除，使用的条件是根据主键得到in查询条件
      *
-     * @param dataConfigBean 数据配置
-     * @param dataList       数据列表
-     * @param tableName      表名
-     * @param pkInfo         主键列
+     * @param dataList  数据列表
+     * @param tableName 表名
+     * @param pkInfo    主键列
      */
-    private void deleteByBatchSql(DataConfigBean dataConfigBean, List<Entity> dataList, String tableName, Set<String> pkInfo) {
-        List<String> deleteSqlList = Lists.partition(dataList, 10)
-                                          .parallelStream()
-                                          .map(list -> list.parallelStream()
-                                                           .flatMap(data -> pkInfo.parallelStream()
-                                                                                  .map(pk -> Pair.of(pk, "'" + data.get(pk) + "'"))
-                                                                                  .toList()
-                                                                                  .stream())
-                                                           .collect(Collectors.groupingBy(Pair::getKey,
-                                                                                          Collectors.mapping(Pair::getValue, Collectors.toList())))
-                                                           .entrySet()
-                                                           .parallelStream()
-                                                           .map(pkDataMap -> pkDataMap.getValue()
-                                                                                      .parallelStream()
-                                                                                      .map(String::valueOf)
-                                                                                      .collect(Collectors.joining(",", pkDataMap.getKey() + " in (",
-                                                                                                                  ")")))
-                                                           .collect(Collectors.joining(" and ", "delete from " + tableName + " where ", "")))
-                                          .toList();
+    private void deleteByBatchSql(String datasourceId, List<Entity> dataList, String tableName, Set<String> pkInfo) {
+        List<String> deleteSqlList = Lists.partition(dataList, 10).parallelStream().map(list -> list.parallelStream().flatMap(
+                        data -> pkInfo.parallelStream().map(pk -> Pair.of(pk, "'" + data.get(pk) + "'")).toList().stream()).collect(
+                        Collectors.groupingBy(Pair::getKey, Collectors.mapping(Pair::getValue, Collectors.toList()))).entrySet().parallelStream()
+                .map(pkDataMap -> pkDataMap.getValue().parallelStream().map(String::valueOf)
+                        .collect(Collectors.joining(",", pkDataMap.getKey() + " in (", ")")))
+                .collect(Collectors.joining(" and ", "delete from " + tableName + " where ", ""))).toList();
         try {
-            Db.use(dataConfigBean.getDataSourceId()).executeBatch(deleteSqlList);
+            DbUtils.use(datasourceId).executeBatch(deleteSqlList);
         } catch (SQLException e) {
-            Log.get().error("数据源{}删除数据失败，异常信息：{}", dataConfigBean.getDataSourceId(), e.getMessage());
+            Log.get().error("数据源[{}]删除数据失败，异常信息：{}", datasourceId, e.getMessage());
             throw new RuntimeException(e);
         }
     }
@@ -144,28 +125,22 @@ public class DataGenerator {
     /**
      * 创建数据集合
      *
-     * @param dataConfig 数据源id
      * @return 生成的数据集合
      */
-    private Pair<String, List<Entity>> generateDataList(TableConfig tableConfig, DataConfigBean dataConfig) {
+    private Pair<TableConfig, List<Entity>> generateDataList(TableConfig tableConfig) {
         String tableCode = tableConfig.getTableName();
         Collection<Column> columnMetaInfoList = tableConfig.getColumns();
         // 唯一索引和主键去重后的列名集合，包含在里面的就要自己定义生成器生产数据
-        List<Entity> res = LongStream.range(0L, tableConfig.getGenNum())
-                                     .parallel()
-                                     .mapToObj(index -> Entity.create(tableCode))
-                                     .peek(dataEntity -> columnMetaInfoList.forEach(
-                                             column -> setColumnValue(dataConfig, tableConfig, tableConfig.getPkInfo(), dataEntity, column)))
-                                     .toList();
-        return Pair.of(tableCode, res);
+        List<Entity> res = LongStream.range(0L, tableConfig.getGenNum()).parallel().mapToObj(index -> Entity.create(tableCode)).peek(
+                        dataEntity -> columnMetaInfoList.forEach(column -> setColumnValue(tableConfig, tableConfig.getPkInfo(), dataEntity, column)))
+                .toList();
+        return Pair.of(tableConfig, res);
     }
 
-    private void setColumnValue(DataConfigBean dataConfig,
-                                TableConfig tableConfig,
-                                Set<String> uniqueIndexColAndPkSet,
-                                Entity entity,
-                                Column column) {
-        if (Optional.ofNullable(dataConfig.getIgnoreCol()).orElse("").contains(column.getName())) {
+    private void setColumnValue(TableConfig tableConfig, Set<String> uniqueIndexColAndPkSet, Entity entity, Column column) {
+        Map<String, List<String>> genIgnoreColMap = configuration.getGenIgnoreColMap();
+        String datasourceId = tableConfig.getDatasourceId();
+        if (genIgnoreColMap.containsKey(datasourceId) && genIgnoreColMap.get(datasourceId).contains(column.getName())) {
             return;
         }
         // 类型
@@ -176,9 +151,9 @@ public class DataGenerator {
         // 数据生成策略器取值
         Object nextVal = getNextVal(tableConfig.getColDataProvider(), colName);
         // 字段默认值
-        Object colDefaultVal = dataConfig.getColDefaultValue().get(colName);
+        Object colDefaultVal = configuration.getGlobalColumnDefaultValMap().get(KeyGenerator.genColDefaultValKey(datasourceId, colName));
         // 取字典值
-        Object dictDefaultVal = getDictValByColName(colName, dataConfig.getDataSourceId());
+        Object dictDefaultVal = getDictValByColName(colName, datasourceId);
         // 类型默认值
         Object typeDefaultVal = getDefaultValByJdbcType(typeEnum);
         if (uniqueIndexColAndPkSet.contains(colName) && nextVal == null && colDefaultVal == null && dictDefaultVal == null) {
@@ -213,9 +188,9 @@ public class DataGenerator {
      * @return JDBC类型的默认值
      */
     public Object getDefaultValByJdbcType(JdbcType jdbcType) {
-        Object defaultVal = configuration.getTypeDefaultValMap().get(jdbcType);
+        Object defaultVal = configuration.getJdbcTypeDefaultValMap().get(jdbcType);
         if (defaultVal == null) {
-            Log.get().error("数据类型{}没有默认值设置，请检查!", jdbcType.name());
+            Log.get().error("JDBC数据类型{}没有默认值设置，请检查!", jdbcType.name());
             throw new RuntimeException();
         }
         return defaultVal;
@@ -230,7 +205,7 @@ public class DataGenerator {
      */
     public Object getDictValByColName(String colName, String dataSourceId) {
         try {
-            Map<String, List<Object>> dictCache = CacheManager.getInstance().get(dataSourceId);
+            Map<String, List<Object>> dictCache = CacheManager.getInstance().get(KeyGenerator.genDictCacheKey(dataSourceId));
             List<Object> dictItems = dictCache.get(colName);
             if (dictItems != null) {
                 return RandomUtil.randomEle(dictItems);
